build: match org and repository name

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
   <!-- OG/Fb -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://rootenginear.github.io/ModCom2019-Homepage/" />
+  <meta property="og:url" content="https://cpe-kmutt-student.github.io/modcom2019-homepage/" />
   <meta property="og:title" content="🃏 ModCom2019 🎲" />
   <meta
     property="og:description"
@@ -25,7 +25,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url"
-    content="https://rootenginear.github.io/ModCom2019-Homepage/" />
+    content="https://cpe-kmutt-student.github.io/modcom2019-homepage/" />
   <meta property="twitter:title" content="🃏 ModCom2019 🎲" />
   <meta
     property="twitter:description"
